Try to have the fullscreen images at a fixed instead of absolute position to see if this disables scrolling on iOS

--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@ body {
 
 
 .CenterBothDirections {
-  position:absolute;
+  position:fixed;
   top:50%;
   left:50%;
   -ms-transform: translateX(-50%) translateY(-50%);
